feat: Add password visibility toggling feature

--- a/app/views/rodauth/_show_password.html.erb
+++ b/app/views/rodauth/_show_password.html.erb
@@ -7,5 +7,5 @@
     name="show-password"
     class="h-4 w-4 text-blue-500 border-gray-300 rounded focus:ring-blue-500"
   >
-  <label for="show-password" class="ml-2 block text-sm text-gray-400">Show Password</label>
+  <label for="show-password" class="ml-2 block text-sm">Show Password</label>
 </div>
