--- a/app/views/rodauth/_login_form.html.erb
+++ b/app/views/rodauth/_login_form.html.erb
@@ -14,7 +14,7 @@
       <div class="space-y-4">
         <%= render "shared/omniauth_buttons", type: "login" %>
         <!-- Rodauth Login Form -->
-        <%= form_with url: rodauth.login_path, method: :post, data: { turbo: false }, class: "space-y-4" do |form| %>
+        <%= form_with url: rodauth.login_path, method: :post, data: { turbo: false, controller: "password-visibility" }, class: "space-y-4" do |form| %>
           <% if rodauth.skip_login_field_on_login? %>
             <div>
               <%= form.label "login",
@@ -65,6 +65,9 @@
                          rodauth.password_label,
                          class: "block text-sm font-medium text-gray-700 mb-1" %>
               <%= form.password_field rodauth.password_param,
+                                  data: {
+                                    password_visibility_target: "password",
+                                  },
                                   value: "",
                                   id: "password",
                                   autocomplete: rodauth.password_field_autocomplete_value,
@@ -94,17 +97,7 @@
           <% end %>
 
           <div class="flex items-center justify-between">
-            <div class="flex items-center">
-              <input
-                type="checkbox"
-                id="remember"
-                name="remember"
-                class="
-                  h-4 w-4 text-blue-500 border-gray-300 rounded focus:ring-blue-500
-                "
-              >
-              <label for="remember" class="ml-2 block text-sm text-gray-700">Remember me</label>
-            </div>
+            <%= render "show_password" %>
             <a
               href="<%= rodauth.reset_password_request_path %>"
               class="text-sm text-blue-500 hover:text-blue-600"
