--- a/app/views/rodauth/_login_form.html.erb
+++ b/app/views/rodauth/_login_form.html.erb
@@ -17,9 +17,7 @@
         <%= form_with url: rodauth.login_path, method: :post, data: { turbo: false, controller: "password-visibility" }, class: "space-y-4" do |form| %>
           <% if rodauth.skip_login_field_on_login? %>
             <div>
-              <%= form.label "login",
-                         rodauth.login_label,
-                         class: "block text-sm font-medium text-gray-700 mb-1" %>
+              <%= form.label "login", rodauth.login_label, class: "block text-sm font-medium mb-1" %>
               <%= form.email_field rodauth.login_param,
                                value: params[rodauth.login_param],
                                id: "login",
@@ -29,9 +27,7 @@
             </div>
           <% else %>
             <div>
-              <%= form.label "login",
-                         rodauth.login_label,
-                         class: "block text-sm font-medium text-gray-700 mb-1" %>
+              <%= form.label "login", rodauth.login_label, class: "block text-sm font-medium mb-1" %>
               <%= form.email_field rodauth.login_param,
                                value: params[rodauth.login_param],
                                id: "login",
@@ -63,7 +59,7 @@
             <div>
               <%= form.label "password",
                          rodauth.password_label,
-                         class: "block text-sm font-medium text-gray-700 mb-1" %>
+                         class: "block text-sm font-medium mb-1" %>
               <%= form.password_field rodauth.password_param,
                                   data: {
                                     password_visibility_target: "password",
@@ -111,14 +107,14 @@
       </div>
       <!-- Sign up and Account verification section -->
       <div class="mt-8">
-        <h3 class="text-sm text-gray-500">
+        <h3 class="text-sm text-gray-400">
           Don't have an account?
           <a
             href="<%= rodauth.create_account_path %>"
             class="text-blue-500 hover:text-blue-600"
           >Sign up</a>
         </h3>
-        <h3 class="text-sm text-gray-500">
+        <h3 class="text-sm text-gray-400">
           Didn't receive the verification email?
           <a
             href="<%= rodauth.verify_account_resend_path %>"
