feat: Update the colors to be blue

--- a/app/views/rodauth/logout.html.erb
+++ b/app/views/rodauth/logout.html.erb
@@ -18,12 +18,12 @@
 
       <%= form.submit rodauth.logout_button,
                   class:
-                    "w-full bg-yellow-300 text-gray-900 px-6 py-2 rounded-md font-semibold hover:bg-yellow-400 transition-colors focus:ring-2 focus:ring-yellow-300 focus:outline-none" %>
+                    "w-full bg-blue-300 text-gray-900 px-6 py-2 rounded-md font-semibold hover:bg-blue-400 transition-colors focus:ring-2 focus:ring-blue-300 focus:outline-none" %>
     <% end %>
     <!-- Back to Dashboard -->
     <div class="text-center">
-      <a href="/" class="text-sm text-blue-600 hover:text-blue-700">
-        Back to Dashboard
+      <a href="/" class="text-sm text-white underline">
+        Home
       </a>
     </div>
   </div>
