--- a/app/views/shared/_left_side.html.erb
+++ b/app/views/shared/_left_side.html.erb
@@ -1,6 +1,6 @@
 <div
   class="
-    hidden md:flex md:w-1/2 bg-blue-500 items-center justify-center flex-col
+    hidden md:flex md:w-1/2 bg-gray-900 items-center justify-center flex-col
   "
 >
   <h1 class="text-white text-6xl font-bold">
