--- a/app/views/shared/_logo.html.erb
+++ b/app/views/shared/_logo.html.erb
@@ -1,6 +1,6 @@
 <div
   class="
-    text-4xl font-bold text-blue-500 hover:text-blue-600 transition-colors
+    text-4xl font-bold text-white hover:text-gray-100 transition-colors underline
   "
 >
   <%= link_to "OdinBook", root_path %>
