--- a/app/views/shared/_page_sidebar.html.erb
+++ b/app/views/shared/_page_sidebar.html.erb
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<aside class="w-64 min-h-screen bg-black fixed">
+<aside class="w-64 min-h-screen fixed">
   <div class="flex flex-col px-3 py-4 text-white">
     <% sidebar_link_class =
       "flex items-center px-3 py-3 text-white rounded-full hover:bg-gray-900 transition-colors transition-200" %>
