--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -1,4 +1,4 @@
-<div class="min-h-screen flex">
+<div class="min-h-screen flex" id="landing">
   <!-- Left side - Hero Image -->
   <%= render "shared/left_side" %>
   <!-- Right side - Auth Section -->
@@ -36,7 +36,7 @@
           href="<%= rodauth.login_path %>"
           class="
             block text-center w-full border border-blue-500 text-blue-500 px-6 py-2
-            rounded-full hover:bg-blue-50 transition-colors
+            rounded-full hover:bg-gray-900 transition-colors
           "
         >
           Sign in
