--- a/app/views/shared/_page_sidebar.html.erb
+++ b/app/views/shared/_page_sidebar.html.erb
@@ -1,13 +1,11 @@
 <!-- Sidebar -->
-<aside class="w-64 min-h-screen fixed">
+<aside class="w-full min-h-screen nav-sidebar">
   <div class="flex flex-col px-3 py-4 text-white">
     <% sidebar_link_class =
-      "flex items-center px-3 py-3 text-white rounded-full hover:bg-gray-900 transition-colors transition-200" %>
+      "flex items-center px-3 py-3 text-white rounded-full hover:bg-neutral-900 transition-colors transition-200" %>
     <!-- Logo -->
     <div class="mb-4 px-3">
-      <%= link_to "#", class: "text-white" do %>
-        <%= render "shared/logo" %>
-      <% end %>
+      <%= render "shared/logo" %>
     </div>
     <!-- Navigation -->
     <nav class="space-y-1">
@@ -153,7 +151,7 @@
       <% end %>
     </nav>
     <!-- Post Button -->
-    <%= button_to "#", class: "mt-4 w-full bg-blue-500 text-white rounded-full py-3 font-bold hover:bg-blue-600 transition-colors" do %>
+    <%= link_to "#", class: "text-xl mt-4 w-80 bg-white text-gray-800 rounded-full py-3 font-bold hover:bg-gray-200 hover:cursor-pointer transition-colors text-center" do %>
       Post
     <% end %>
     <!-- Logout -->
