--- a/app/views/rodauth/reset_password.html.erb
+++ b/app/views/rodauth/reset_password.html.erb
@@ -11,7 +11,7 @@
         Set a New Password
       </h1>
 
-      <p class="text-sm text-gray-600">
+      <p class="text-sm ">
         Enter a new password below to secure your account.
       </p>
 
@@ -19,7 +19,7 @@
         <div>
           <%= form.label "password",
                      rodauth.password_label,
-                     class: "block text-sm font-medium text-gray-700 mb-1" %>
+                     class: "block text-sm font-medium  mb-1" %>
           <%= form.password_field rodauth.password_param,
                               value: "",
                               id: "password",
@@ -52,7 +52,7 @@
           <div>
             <%= form.label "password-confirm",
                        rodauth.password_confirm_label,
-                       class: "block text-sm font-medium text-gray-700 mb-1" %>
+                       class: "block text-sm font-medium mb-1" %>
             <%= form.password_field rodauth.password_confirm_param,
                                 value: "",
                                 id: "password-confirm",
