--- a/app/views/rodauth/reset_password_request.html.erb
+++ b/app/views/rodauth/reset_password_request.html.erb
@@ -11,7 +11,7 @@
         Reset Your Password
       </h1>
 
-      <p class="text-sm text-gray-600 dark:text-gray-300">
+      <p class="text-sm dark:text-gray-300">
         <%== rodauth.reset_password_explanatory_text %>
       </p>
 
@@ -22,7 +22,7 @@
           <div>
             <%= form.label "login",
                        rodauth.login_label,
-                       class: "block text-sm font-medium text-gray-700 mb-1" %>
+                       class: "block text-sm font-medium  mb-1" %>
             <%= form.email_field rodauth.login_param,
                              value: params[rodauth.login_param],
                              id: "login",
