--- a/app/views/rodauth/verify_account_resend.html.erb
+++ b/app/views/rodauth/verify_account_resend.html.erb
@@ -20,9 +20,7 @@
           <%= form.hidden_field rodauth.login_param, value: params[rodauth.login_param] %>
         <% else %>
           <div>
-            <%= form.label "login",
-                       rodauth.login_label,
-                       class: "block text-sm font-medium text-gray-700 mb-1" %>
+            <%= form.label "login", rodauth.login_label, class: "block text-sm font-medium mb-1" %>
             <%= form.email_field rodauth.login_param,
                              value: params[rodauth.login_param],
                              id: "login",
