--- a/app/views/shared/_page_sidebar.html.erb
+++ b/app/views/shared/_page_sidebar.html.erb
@@ -2,7 +2,7 @@
 <aside class="w-full min-h-screen nav-sidebar">
   <div class="flex flex-col px-3 py-4 text-white">
     <% sidebar_link_class =
-      "flex items-center px-3 py-3 text-white rounded-full hover:bg-neutral-900 transition-colors transition-200" %>
+      "flex items-center px-3 py-3 text-white rounded-full hover:bg-neutral-900 hover:max-w-fit transition-200" %>
     <!-- Logo -->
     <div class="mb-4 px-3">
       <%= render "shared/logo" %>
