feat: Fix layout issues and add logic for new and profile edit forms

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,8 +1,9 @@
-<%= form_with model: profile, multipart: true, data: { turbo: false }, class: "w-full max-w-lg mx-auto space-y-6" do |form| %>
+<%= form_with model: profile, multipart: true, data: { turbo: false }, class: "w-full max-w-lg space-y-6" do |form| %>
   <!-- Name Field -->
   <div>
     <%= form.label :name, "Full Name", class: "block text-sm font-semibold" %>
     <%= form.text_field :name,
+                    required: true,
                     class:
                       "w-full mt-2 px-3 py-2 border rounded-md text-sm #{"border-red-600" if profile.errors[:name].present?}" %>
     <% if profile.errors[:name].present? %>
@@ -13,6 +14,7 @@
   <div>
     <%= form.label :username, "Username", class: "block text-sm font-semibold" %>
     <%= form.text_field :username,
+                    required: true,
                     class:
                       "w-full mt-2 px-3 py-2 border rounded-md text-sm #{"border-red-600" if profile.errors[:username].present?}" %>
     <% if profile.errors[:username].present? %>
@@ -21,7 +23,7 @@
   </div>
   <!-- Bio Field -->
   <div>
-    <%= form.label :bio, "Bio", class: "block text-sm font-semibold" %>
+    <%= form.label :bio, "Bio", class: "block text-sm font-semibold", required: true %>
     <%= form.text_area :bio,
                    class:
                      "w-full mt-2 px-3 py-2 border rounded-md text-sm #{"border-red-600" if profile.errors[:bio].present?}",
@@ -38,21 +40,30 @@
     <%= form.file_field :avatar,
                     accept: "image/*",
                     class:
-                      "w-full mt-2 text-sm file:mr-4 file:py-2 file:px-4 file:rounded file:border file:border-gray-300 file:text-blue-600 hover:file:bg-blue-100 cursor-pointer" %>
+                      "w-full mt-2 text-sm file:mr-4 file:py-2 file:px-4 file:rounded file:border file:border-gray-300 file:text-white hover:file:bg-neutral-800 cursor-pointer" %>
     <% if profile.avatar.attached? %>
       <div class="mt-2">
         <img
           src="<%= url_for(profile.avatar) %>"
           alt="Profile Picture"
           class="w-20 h-20 rounded-full object-cover"
+          title="<%= profile.username %>"
         >
       </div>
     <% end %>
   </div>
   <!-- Submit Button -->
-  <div>
+  <div class="flex flex-wrap justify-between gap-4">
     <%= form.submit "Update Profile",
                 class:
-                  "w-full px-8 py-3 font-semibold text-sm rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600" %>
+                  "px-8 py-3 font-semibold text-sm rounded-md text-gray-900 bg-white hover:bg-neutral-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-neutral-600" %>
+
+    <% unless profile.new_record? %>
+      <%= button_to "Cancel",
+      current_user_profile_path,
+      method: :get,
+      class:
+        "px-8 py-3 font-semibold text-sm text-white rounded-md bg-red-800 hover:bg-red-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-900" %>
+    <% end %>
   </div>
 <% end %>
