--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,15 +1,11 @@
-<div class="flex min-h-screen">
-  <%= render "shared/page_sidebar" %>
-  <main class="w-3/4 p-6">
-    <div
-      id="<%= dom_id(@profile) %>"
-      class="mx-auto w-full md:w-1/2 flex flex-col p-8 md:p-12 justify-center"
-    >
-      <div class="w-full max-w-lg mx-auto mb-4">
-        <h1 class="text-5xl font-bold leading-none text-gray-800 mb-2">Edit your profile</h1>
-        <p class="text-lg font-medium leading-none text-gray-700">Edit your details</p>
-      </div>
-      <%= render "form", profile: @profile %>
+<section
+  id="profile-edit"
+  class="p-6 content-section w-full max-w-screen-sm mx-auto"
+>
+  <div id="<%= dom_id(@profile) %>">
+    <div class="mb-4">
+      <h1 class="text-5xl font-bold leading-none mb-2">Edit your profile</h1>
     </div>
-  </main>
-</div>
+    <%= render "form", profile: @profile %>
+  </div>
+</section>
