--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,17 +1,9 @@
-<div class="min-h-screen flex">
-  <%= render "shared/page_sidebar" %>
-
-  <main class="w-3/4 p-6">
-    <div
-      id="<%= dom_id(@profile) %>"
-      class="mx-auto w-full md:w-1/2 flex flex-col p-8 md:p-12 justify-center"
-    >
-      <div class="w-full max-w-lg mx-auto mb-4">
-        <h1 class="text-5xl font-bold leading-none text-gray-800 mb-2">Complete your profile</h1>
-        <p class="text-lg font-medium leading-none text-gray-700">You are almost there, complete your profile to finalize your account
-          setup</p>
-      </div>
-      <%= render "form", profile: @profile %>
-    </div>
-  </main>
-</div>
+<section id="<%= dom_id(@profile) %>" class="p-6 mx-auto">
+  <div class="w-full max-w-lg mb-4">
+    <h1 class="text-5xl font-bold leading-none mb-2">Complete your profile</h1>
+    <p class="text-lg font-medium leading-none">
+      You are almost there, complete your profile to finalize your account
+      setup</p>
+  </div>
+  <%= render "form", profile: @profile %>
+</section>
