--- a/app/views/profiles/_profile.html.erb
+++ b/app/views/profiles/_profile.html.erb
@@ -1,6 +1,6 @@
 <!-- Profile Content -->
 <section id="<%= dom_id(profile) %>" class="content-section">
-  <div class="shadow-lg rounded-lg p-6">
+  <div class="shadow-lg rounded-lg">
     <div class="flex justify-between flex-wrap">
       <!-- Avatar -->
       <div class="flex items-center space-x-4">
