feat: Add posts feature

--- a/app/views/shared/_page_sidebar.html.erb
+++ b/app/views/shared/_page_sidebar.html.erb
@@ -9,7 +9,7 @@
     </div>
     <!-- Navigation -->
     <nav class="space-y-1">
-      <%= link_to "#", class: sidebar_link_class do %>
+      <%= link_to posts_path, class: sidebar_link_class do %>
         <svg
           class="h-7 w-7"
           viewBox="0 0 24 24"
