--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <% if rodauth.logged_in? %>
       <main class="container">
         <%= render "shared/page_sidebar" %>
-        <section class="content-section border-gray-500 border-l border-r">
+        <section class="content-section border-gray-500 border-l border-r p-8">
           <%= yield %>
         </section>
         <%= render "shared/right_sidebar" %>
