--- a/app/views/shared/_logo.html.erb
+++ b/app/views/shared/_logo.html.erb
@@ -3,5 +3,5 @@
     text-4xl font-bold text-white hover:text-gray-100 transition-colors underline
   "
 >
-  <%= link_to "OdinBook", root_path %>
+  <%= link_to "OdinBook", posts_path %>
 </div>
