feat: Use a neutral color for the separator on the landing page

--- a/app/views/shared/_left_side.html.erb
+++ b/app/views/shared/_left_side.html.erb
@@ -1,6 +1,6 @@
 <div
   class="
-    hidden md:flex md:w-1/2 bg-black border-r border-gray-500 items-center
+    hidden md:flex md:w-1/2 bg-black border-r border-neutral-700 items-center
     justify-center flex-col
   "
 >
