--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -42,30 +42,62 @@
               ></path>
             </svg>
           <% end %>
-
-          <%= link_to edit_post_path(post), class: "group flex items-center text-gray-500 hover:text-green-400" do %>
-            <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <!-- Post Likes -->
+          <%= button_to "#",
+          class: "group flex items-center text-gray-500 hover:text-red-400 border-none",
+          type: "button",
+          data: { controller: "likes",
+                  action: "likes#toggle",
+                  likes_type_value: "Post",
+                  likes_id_value: post.id,
+                  likes_liked_value: current_user.liked?(post),
+                  likes_count_value: post.likes_count
+                  } do %>
+            <svg
+              data-likes-target="icon"
+              class="w-5 h-5 mr-2 border-none"
+              fill="<%= current_user.liked?(post) ? 'red' : 'none' %>"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+            >
               <path
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 stroke-width="2"
-                d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"
-              ></path>
+                d="M12 21l-1.45-1.35C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.15L12 21z"
+              >
+              </path>
             </svg>
+            <span data-likes-target="count"></span>
           <% end %>
 
-          <%= button_to post,
-                    method: :delete,
-                    class: "group flex items-center text-gray-500 hover:text-red-400",
-                    data: { turbo_confirm: "Are you sure you want to delete this post?" } do %>
-            <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
-              ></path>
-            </svg>
+          <% if allowed_to?(:edit?, post) %>
+            <%= link_to edit_post_path(post), class: "group flex items-center text-gray-500 hover:text-green-400" do %>
+              <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"
+                ></path>
+              </svg>
+            <% end %>
+          <% end %>
+
+          <% if allowed_to?(:destroy?, post) %>
+            <%= button_to post,
+                  method: :delete,
+                  class: "group flex items-center text-gray-500 hover:text-red-400",
+                  data: { turbo_confirm: "Are you sure you want to delete this post?" } do %>
+              <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
+                ></path>
+              </svg>
+            <% end %>
           <% end %>
         </div>
       </div>
