--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,12 +7,14 @@
     <%= render "form", post: @post %>
   <% end %>
 
-  <%= link_to "Show this post",
-  @post,
-  class:
-    "ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-  <%= link_to "Back to posts",
-  posts_path,
-  class:
-    "ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+  <div class="flex space-x-2 flex-wrap mt-2">
+    <%= link_to "Show this post",
+    @post,
+    class:
+      "ml-2 rounded-md px-3.5 py-2.5 bg-white text-gray-900 hover:bg-gray-50 inline-block font-medium" %>
+    <%= link_to "Back to posts",
+    posts_path,
+    class:
+      "ml-2 rounded-md px-3.5 py-2.5 bg-white text-gray-900 hover:bg-gray-50 inline-block font-medium" %>
+    </div>
 </div>
