--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,16 @@
 <% content_for :title,
 make_title("#{@post.author.name}: #{@post.content.truncate(100)}") %>
 
-<div class="max-w-xl w-full bg-black border border-gray-800 rounded-lg">
+<div class="flex justify-between">
+  <div>
+    <%= link_to raw("&larr; Back"), posts_path, class: "text-gray-400 hover:text-white transition-colors" %>
+  </div>
+
+  <!-- Admin actions -->
+  <%= render "post_admin_actions", post: @post %>
+</div>
+
+<div class="max-w-xl w-full border-gray-800">
   <div class="p-4">
     <!-- Author section -->
     <div class="flex">
@@ -30,89 +39,8 @@ make_title("#{@post.author.name}: #{@post.content.truncate(100)}") %>
         <!-- Post content -->
         <div class="mt-2 text-white text-lg"><%= @post.content %></div>
         <!-- Post actions -->
-        <div class="mt-3 flex items-center space-x-8 text-gray-500">
-          <button class="flex items-center group">
-            <svg
-              class="w-5 h-5 group-hover:text-blue-400"
-              fill="none"
-              stroke="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
-              ></path>
-            </svg>
-          </button>
-
-          <button class="flex items-center group">
-            <svg
-              class="w-5 h-5 group-hover:text-green-400"
-              fill="none"
-              stroke="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
-              ></path>
-            </svg>
-          </button>
-
-          <button class="flex items-center group">
-            <svg
-              class="w-5 h-5 group-hover:text-red-400"
-              fill="none"
-              stroke="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-              ></path>
-            </svg>
-          </button>
-
-          <button class="flex items-center group">
-            <svg
-              class="w-5 h-5 group-hover:text-blue-400"
-              fill="none"
-              stroke="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"
-              ></path>
-            </svg>
-          </button>
-        </div>
+        <%= render "post_actions", post: @post %>
       </div>
     </div>
-  </div>
-  <!-- Admin actions -->
-  <div class="border-t border-gray-800 p-4 flex space-x-2">
-    <%= link_to "Edit",
-    edit_post_path(@post),
-    class: "text-gray-400 hover:text-white transition-colors" %>
-    <%= link_to "Back",
-    posts_path,
-    class: "text-gray-400 hover:text-white transition-colors" %>
-    <%= button_to "Delete",
-    @post,
-    method: :delete,
-    class: "text-red-500 hover:text-red-400 transition-colors",
-    data: {
-      turbo_confirm: "Are you sure you want to delete this post?",
-      turbo_frame: "_top",
-    } %>
   </div>
 </div>
