--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -17,3 +17,19 @@
 .right-sidebar {
   grid-area: right-sidebar;
 }
+
+@keyframes burst {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.animate-burst {
+  animation: burst 0.5s ease-in-out;
+}
