--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,9 +1,6 @@
 <%= turbo_frame_tag post do %>
   <div
-    class="
-      p-4 hover:bg-gray-900/50 transition-colors border-b border-t border-gray-800
-    "
-  >
+    class="p-4 hover:bg-gray-900/50 transition-colors border-b <%= border_separator_color %>">
     <div class="flex space-x-4">
       <!-- Author Avatar -->
       <div class="flex-shrink-0">
