refactor: Removed gray text around like (heart) icon for fuller red color

--- a/app/views/posts/_post_actions.html.erb
+++ b/app/views/posts/_post_actions.html.erb
@@ -30,8 +30,7 @@
 
   <!-- like -->
   <%= button_to "#",
-    class: "group flex items-center text-gray-500 hover:text-red-400 border-none",
-    type: "button",
+    class: "flex items-center hover:text-red-400 border-none",
     data: { controller: "likes",
             action: "likes#toggle",
             likes_type_value: "Post",
