--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -10,5 +10,5 @@
   <%= link_to "Back to posts",
   posts_path,
   class:
-    "ml-2 rounded-md px-3.5 py-2.5 bg-gray-900 hover:bg-gray-800 inline-block font-medium" %>
+    "mt-2 ml-2 rounded-md px-3.5 py-2.5 bg-white text-gray-800 hover:bg-gray-100 inline-block font-medium" %>
 </div>
