--- a/app/views/rodauth/reset_password.html.erb
+++ b/app/views/rodauth/reset_password.html.erb
@@ -5,16 +5,16 @@
   <div class="w-full md:w-1/2 flex flex-col p-8 md:p-12 justify-center">
     <div class="max-w-md w-full mx-auto space-y-8">
       <!-- Logo -->
-      <%= render "shared/logo" %>
+      <div class="text-center">
+        <%= render "shared/logo" %>
+      </div>
       <!-- Heading -->
-      <h1 class="text-3xl font-bold">
+      <h1 class="text-3xl font-bold text-center">
         Set a New Password
       </h1>
-
       <p class="text-sm ">
         Enter a new password below to secure your account.
       </p>
-
       <%= form_with url: rodauth.reset_password_path, method: :post, data: { turbo: false }, class: "space-y-6" do |form| %>
         <div>
           <%= form.label "password",
@@ -47,7 +47,6 @@
             )
           end %>
         </div>
-
         <% if rodauth.require_password_confirmation? %>
           <div>
             <%= form.label "password-confirm",
@@ -81,20 +80,11 @@
             end %>
           </div>
         <% end %>
-
         <%= form.submit rodauth.reset_password_button,
                     class:
                       "w-full bg-blue-500 text-white px-6 py-2 rounded-full hover:bg-blue-600 transition-colors" %>
       <% end %>
-
-      <div class="mt-4 text-center">
-        <a
-          href="<%= rodauth.login_path %>"
-          class="text-sm text-blue-500 hover:text-blue-600"
-        >
-          Back to login
-        </a>
-      </div>
+      <%= render "back_to_login" %>
     </div>
   </div>
 </div>
