--- a/app/views/rodauth/verify_account.html.erb
+++ b/app/views/rodauth/verify_account.html.erb
@@ -5,17 +5,17 @@
   <div class="w-full md:w-1/2 flex flex-col p-8 md:p-12 justify-center">
     <div class="max-w-md w-full mx-auto space-y-8">
       <!-- Logo -->
-      <%= render "shared/logo" %>
+      <div class="text-center">
+        <%= render "shared/logo" %>
+      </div>
       <!-- Heading -->
-      <h1 class="text-3xl font-bold">
+      <h1 class="text-3xl font-bold text-center">
         Verify Your Account
       </h1>
-
-      <p class="text-sm text-gray-600">
+      <p class="text-sm text-gray-200 text-center">
         Complete your account setup by verifying your email and setting a
         password if required.
       </p>
-
       <%= form_with url: rodauth.verify_account_path, method: :post, data: { turbo: false }, class: "space-y-6" do |form| %>
         <% if rodauth.verify_account_set_password? %>
           <div>
@@ -49,7 +49,6 @@
               )
             end %>
           </div>
-
           <% if rodauth.require_password_confirmation? %>
             <div>
               <%= form.label "password-confirm",
@@ -84,20 +83,11 @@
             </div>
           <% end %>
         <% end %>
-
         <%= form.submit rodauth.verify_account_button,
                     class:
                       "w-full bg-blue-500 text-white px-6 py-2 rounded-full hover:bg-blue-600 transition-colors" %>
       <% end %>
-
-      <div class="mt-4 text-center">
-        <a
-          href="<%= rodauth.login_path %>"
-          class="text-sm text-blue-500 hover:text-blue-600"
-        >
-          Back to login
-        </a>
-      </div>
+      <%= render "back_to_login" %>
     </div>
   </div>
 </div>
